# CrumbEngine

./: .gitmodules  CMakeLists.txt  README.md
ExtraCMake/: CMakeLists - stb.txt
apps/: CMakeLists.txt
apps/Base/: CMakeLists.txt
apps/MorgCraft/: CMakeLists.txt
apps/MorgCraft/include/: MCWorld.h  MorgCraft.h
apps/MorgCraft/src/: MCWorld.cpp  MorgCraft.cpp  main.cpp
docs/: CodeConventions.md  Docs.md  GetStarted.md
engine/: CMakeLists.txt  CrumbEntry.cpp
engine/core/: CMakeLists.txt  Entry.cpp
engine/core/include/: Core.h  WindowManager.h
engine/core/src/: Core.cpp  WindowManager.cpp
engine/include/: GraphicsIncludes.h  pch.h
engine/include/Assets/: AssetManager.h  Texture.h
engine/include/Audio/: AudioComponents.h  AudioSystem.h
engine/include/Core/: BaseSystem.h  Camera.h  Core.h  CoreComponents.h  CoreFeatures.h  Event.h  Game.h  MemoryPool.h  Mesh.h  Platform.h
engine/include/Entities/: Block.h
engine/include/Game/: Game.h
engine/include/Input/: InputCodes.h  InputEvent.h  InputManager.h  InputSystem.h
engine/include/Renderer/: Renderer.h
engine/include/Shaders/: BaseShader.h
engine/include/Window/: WindowManager.h
engine/include/World/: BlockInfo.md  Chunk.h  World.h
engine/resources/: Pass.frag  Pass.vert
engine/src/Assets/: Texture.cpp
engine/src/Audio/: AudioSystem.cpp
engine/src/Core/: BaseSystem.cpp  Camera.cpp  Core.cpp  Event.cpp  Game.cpp  Mesh.cpp  World.cpp
engine/src/Game/: Game.cpp
engine/src/Input/: InputEvent.cpp  InputManager.cpp  InputSystem.cpp
engine/src/Renderer/: Renderer.cpp
engine/src/Shaders/: BaseShader.cpp
engine/src/Window/: WindowManager.cpp
engine/src/World/: Chunk.cpp  World.cpp
engine/src/resources/: DirtTest.tga  Pass.frag  Pass.vert  References.md
include/Engine/: Core.h
src/: CMakeLists.txt
src/Engine/: Core.cpp  CrumbEntry.cpp
src/MorgCraft/: MCEntry.cpp
